Finished the landing page for ducks

--- a/index.html
+++ b/index.html
@@ -4,14 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LandingPage</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <!-- Nav bar START-->
     <nav class="container">
-        <a href="#" class="logo">Header Logo</a>
-        <a href="#">Header link one</a>
-        <a href="#">Header link two</a>
-        <a href="#">Header link three</a>
+        <div class="logo">DUCK</div>
+        <div class="link">Duck Rules</div> 
+        <div class="link">Duck Alerts</div>
+        <div class="link">Crimes</div>
     </nav>
     <!-- Nav bar END-->
 
@@ -20,15 +21,55 @@
         <div class="left-box">
             <h1>Hello!!</h1>
             <p>
-                This website is a landingpage that is gonna have a lot of unintelligent stuff.
-                this is a WARNING!
+                This is dedicated to all the Ducks of the world.
             </p>
-            <button>Sign up for Stupidity</button>
+            <button>Sign up for Duckness</button>
         </div>
         <div class="right-box">
-            <img src="">
+            <img src="images/sunglassesduck.jpeg">
         </div>
      </div>
      <!-- HERO END-->
+    
+     <section class="info-section">
+        <h2>Some random information.</h2>
+        <div class="info-cards">
+            <div class="card">
+                <div class="illustration"><img src="images/staringduck.jpeg"></div>
+                <p>This is the Duck of STARING.
+                    Has never lost a game ENGLISH OR SPANISH.
+                </p>
+            </div>
+            <div class="card">
+                <div class="illustration"><img src="images/hatduck.jpeg"></div>
+                <p>A duck with a fashion sense.</p>
+            </div>
+            <div class="card">
+                <div class="illustration"><img src="images/duckzilla.jpeg"></div>
+                <p>Duckzilla a Guardian of all ducks.</p>
+            </div>
+            <div class="card">
+                <div class="illustration"><img src="images/gunduck.jpeg"></div>
+                <p>Becareful of him the Duck with A Gun, one of the mafia lords of the Duckworld.</p>
+            </div>
+        </div>
+    </section>
+
+    <section class="quote-section">
+        <blockquote>
+            This is supposed to be an inspiring quote, or a testimonial from a fellow Duck. 
+            Maybe it's just filling up space, or maybe people will actually read it. 
+            Who knows? All I know is that if u have read this far you are ready to join DA..
+        </blockquote>
+        <cite>-Your Fellow Duck, from DA.</cite>
+    </section>
+
+    <section class="cta-section">
+        <div class="cta-content">
+            <h2>Call to Quack ! Time's up!</h2>
+            <p>Sign up for Duckness stuff by clicking that button right over there!</p>
+        </div>
+        <button class="cta-button">Sign up for Duckness</button>
+    </section>
 </body>
 </html>
